updated scripts to also run on sample data

--- a/Code/analyze_results_dataframe.ipynb
+++ b/Code/analyze_results_dataframe.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,10 +121,15 @@
     "    \n",
     "    for doc in dta.specialty.unique():  \n",
     "        for bez in dta.state.unique():\n",
-    "            maxv = dta.loc[(dta.state==bez)&(dta.specialty==doc),'free_capacity_state'].max()\n",
-    "            dta.loc[(dta.state==bez)&(dta.specialty==doc),'remaining_FC_filled'] = \\\n",
-    "                        dta.loc[(dta.state==bez)&(dta.specialty==doc),'free_capacity_state'].values * (100/maxv)\n",
-    "\n",
+    "            \n",
+    "            if dta.loc[(dta.state==bez)&(dta.specialty==doc),'free_capacity_state'].max() > 0:\n",
+    "                maxv = dta.loc[(dta.state==bez)&(dta.specialty==doc),'free_capacity_state'].max()\n",
+    "                dta.loc[(dta.state==bez)&(dta.specialty==doc),'remaining_FC_filled'] = \\\n",
+    "                            dta.loc[(dta.state==bez)&(dta.specialty==doc),'free_capacity_state'].values * (100/maxv)\n",
+    "            else:\n",
+    "                dta.loc[(dta.state==bez)&(dta.specialty==doc),'remaining_FC_filled'] = np.nan\n",
+    "            \n",
+    "                \n",
     "    dta.remaining_FC_filled = 100-dta.remaining_FC_filled\n",
     "    return dta"
    ]
@@ -138,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "iterations = 100     # number of sim iterations\n",
     "shocks = 5000        # number of maximum doctors to remove\n",
     "remov = 1            # number of docs removed in each step\n",
-    "alpha = 0            # teleportation probability (try 0 or 0.0 if error - formatting issue)\n",
+    "alpha = 0.0            # teleportation probability (try 0 or 0.0 if error - formatting issue)\n",
     "max_steps = 10       # max steps for patients before becoming lost\n",
     "kd = 1               # keep disconnected doctors 0/1\n",
     "threshold = 0.9      # capacity threshold for calculation\n",
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
