--- a/Code/final_plots_and_regression.ipynb
+++ b/Code/final_plots_and_regression.ipynb
@@ -159,14 +159,14 @@
     "#plt.suptitle('Austria',fontsize=font)\n",
     "ax[0].set_xlabel(r'$L_{FC}$ [%]',fontsize=font)\n",
     "ax[0].set_ylabel(r'$L_{LP}$ [%]',fontsize=font)\n",
-    "ax[0].set_xlim([8,20])\n",
-    "ax[0].set_ylim([5,60])\n",
+    "ax[0].set_xlim([0,100])   #baseline setting [8,20]\n",
+    "ax[0].set_ylim([0,100])   #baseline setting [5,60]\n",
     "\n",
     "\n",
     "ax[1].set_xlabel('Risk',fontsize=font)\n",
     "ax[1].set_ylabel('Benefit',fontsize=font)\n",
-    "ax[1].set_xlim([0.3,0.9])\n",
-    "ax[1].set_ylim([0,1])\n",
+    "ax[1].set_xlim([0,1])      #baseline setting [0.3,0.9]\n",
+    "ax[1].set_ylim([0,1])      #baseline setting [0,1]\n",
     "plt.legend(doc_list['EN'],bbox_to_anchor=(1.4, 1),fontsize=20)\n",
     "plt.tight_layout()\n",
     "fig.subplots_adjust(wspace=0.25)\n",
@@ -342,8 +342,8 @@
     "FC.columns = ['state','specialty','perc_docs_removed_mean','perc_docs_removed_std']\n",
     "\n",
     "### add info on state ID\n",
-    "states = {'state':['Burgenland','Kärnten','Niederösterreich','Oberösterreich',\n",
-    "                       'Salzburg','Steiermark','Tirol','Vorarlberg','Wien'],'state_id':[1,2,3,4,5,6,7,8,9]}\n",
+    "states = {'state':['Burgenland','Carinthia','Lower Austria','Upper Austria',\n",
+    "                       'Salzburg','Styria','Tyrol','Vorarlberg','Vienna'],'state_id':[1,2,3,4,5,6,7,8,9]}\n",
     "\n",
     "LP['state_ID'] = 0\n",
     "FC['state_ID'] = 0\n",
@@ -362,10 +362,12 @@
     "### fill in\n",
     "for fg in doc_list['EN']:\n",
     "    for st in LP.state.unique():\n",
-    "        LPheat.loc[fg,st] = float(LP.loc[(LP.state==st)&(LP.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'].item())\n",
-    "        FCheat.loc[fg,st] = float(FC.loc[(FC.state==st)&(FC.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'].item())\n",
-    "        LPheat[st] = LPheat[st].astype(float)\n",
-    "        FCheat[st] = FCheat[st].astype(float)\n",
+    "        if len(LP.loc[(LP.state==st)&(LP.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'])>0:\n",
+    "            LPheat.loc[fg,st] = float(LP.loc[(LP.state==st)&(LP.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'].item())\n",
+    "            LPheat[st] = LPheat[st].astype(float)\n",
+    "        if len(FC.loc[(FC.state==st)&(FC.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'])>0:\n",
+    "            FCheat.loc[fg,st] = float(FC.loc[(FC.state==st)&(FC.specialty==doc_list['DE'][doc_list['EN'].index(fg)]),'perc_docs_removed_mean'].item())\n",
+    "            FCheat[st] = FCheat[st].astype(float)\n",
     "\n",
     "FCheat = FCheat.sort_values(by='Burgenland')\n",
     "LPheat = LPheat.reindex(FCheat.index.values)"
@@ -428,7 +430,8 @@
    "source": [
     "## Linear regression for LP/FC to risk and benefit\n",
     "* LP/FC ~ < risk > + < benefit > + const.\n",
-    "* for every state & specialty"
+    "* for every state & specialty\n",
+    "* only gives meaningful results with entire dataset, otherwise NaN for missing values in states and specialties"
    ]
   },
   {
@@ -446,16 +449,20 @@
     "for st in FC.state_ID.unique():\n",
     "    for d in FC.specialty.unique():\n",
     "        # risk & benefit\n",
-    "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'RiskScore'] = final_gr.loc[(final_gr.state_ID==st)&\n",
+    "        if len(final_gr.loc[(final_gr.state_ID==st)&(final_gr.fg==d),('Risk','mean')])>0:\n",
+    "            FC.loc[(FC.state_ID==st)&(FC.specialty==d),'RiskScore'] = final_gr.loc[(final_gr.state_ID==st)&\n",
     "                                                                        (final_gr.fg==d),('Risk','mean')].item()\n",
-    "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'BenefitScore'] = final_gr.loc[(final_gr.state_ID==st)&\n",
+    "        if len(final_gr.loc[(final_gr.state_ID==st)&(final_gr.fg==d),('Benefit','mean')])>0:\n",
+    "            FC.loc[(FC.state_ID==st)&(FC.specialty==d),'BenefitScore'] = final_gr.loc[(final_gr.state_ID==st)&\n",
     "                                                                        (final_gr.fg==d),('Benefit','mean')].item()\n",
     "        \n",
     "        # LP & FC\n",
-    "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'FC'] = FC.loc[(FC.state_ID==st)&(FC.specialty==d),\n",
-    "                                                                  'perc_docs_removed'].item()\n",
-    "        FC.loc[(FC.state_ID==st)&(FC.specialty==d),'LP'] = LP.loc[(LP.state_ID==st)&(LP.specialty==d),\n",
-    "                                                                  'perc_docs_removed'].item()"
+    "        if len(FC.loc[(FC.state_ID==st)&(FC.specialty==d),'perc_docs_removed_mean'])>0:\n",
+    "            FC.loc[(FC.state_ID==st)&(FC.specialty==d),'FC'] = FC.loc[(FC.state_ID==st)&(FC.specialty==d),\n",
+    "                                                                  'perc_docs_removed_mean'].item()\n",
+    "        if len(LP.loc[(LP.state_ID==st)&(LP.specialty==d),'perc_docs_removed_mean'])>0:\n",
+    "            FC.loc[(FC.state_ID==st)&(FC.specialty==d),'LP'] = LP.loc[(LP.state_ID==st)&(LP.specialty==d),\n",
+    "                                                                  'perc_docs_removed_mean'].item()"
    ]
   },
   {
@@ -464,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FC.drop(columns=['num_docs_removed','perc_free_capacity','perc_docs_removed'],inplace=True)\n",
+    "#FC.drop(columns=['num_docs_removed','perc_free_capacity','perc_docs_removed'],inplace=True)\n",
     "df = FC.copy()"
    ]
   },
@@ -484,10 +491,11 @@
     "    X = df[['RiskScore','BenefitScore']].copy()\n",
     "    y = df[out].copy()\n",
     "\n",
-    "    res = LinearRegression(normalize=True).fit(X,y)\n",
-    "    \n",
-    "    reg.loc['RiskScore',out] = res.coef_[0]\n",
-    "    reg.loc['BenefitScore',out] = res.coef_[1]\n",
+    "    if np.all(X.isna())==True:\n",
+    "        res = LinearRegression(normalize=True).fit(X,y)\n",
+    "\n",
+    "        reg.loc['RiskScore',out] = res.coef_[0]\n",
+    "        reg.loc['BenefitScore',out] = res.coef_[1]\n",
     "display(reg)"
    ]
   },
@@ -508,11 +516,12 @@
     "        X = df.loc[df.specialty==sp,['RiskScore','BenefitScore']].copy()\n",
     "        y = df.loc[df.specialty==sp,out].copy()\n",
     "\n",
-    "        res = LinearRegression(normalize=True).fit(X,y)\n",
+    "        if np.all(X.isna())==True:\n",
+    "            res = LinearRegression(normalize=True).fit(X,y)\n",
     "\n",
-    "        reg.loc['RiskScore',out] = res.coef_[0]\n",
-    "        reg.loc['BenefitScore',out] = res.coef_[1]\n",
-    "        reg.specialty = sp\n",
+    "            reg.loc['RiskScore',out] = res.coef_[0]\n",
+    "            reg.loc['BenefitScore',out] = res.coef_[1]\n",
+    "            reg.specialty = sp\n",
     "    reg_all = pd.concat([reg_all,reg])\n",
     "    print('---------  '+sp+'  -----------')\n",
     "    display(reg)"
